--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,13 @@ matrix:
   include:
     - os: osx
       compiler: clang
-      env: OPJ_CI_ARCH=x86_64 OPJ_CI_BUILD_CONFIGURATION=Release
+      env: OPJ_CI_ARCH=x86_64 OPJ_CI_BUILD_CONFIGURATION=Release OPJ_CI_BUILD_SHARED_LIBS=OFF
     - os: linux
       compiler: gcc
-      env: OPJ_CI_ARCH=x86_64 OPJ_CI_BUILD_CONFIGURATION=Release
+      env: OPJ_CI_ARCH=x86_64 OPJ_CI_BUILD_CONFIGURATION=Release OPJ_CI_BUILD_SHARED_LIBS=OFF
     - os: linux
       compiler: x86_64-w64-mingw32-gcc
-      env: OPJ_CI_ARCH=x86_64 OPJ_CI_BUILD_CONFIGURATION=Release
+      env: OPJ_CI_ARCH=x86_64 OPJ_CI_BUILD_CONFIGURATION=Release OPJ_CI_BUILD_SHARED_LIBS=OFF
       addons:
         apt:
           packages:
@@ -20,7 +20,7 @@ matrix:
             - gcc-mingw-w64
     - os: linux
       compiler: x86_64-w64-mingw32-gcc
-      env: OPJ_CI_ARCH=i386 OPJ_CI_BUILD_CONFIGURATION=Release
+      env: OPJ_CI_ARCH=i386 OPJ_CI_BUILD_CONFIGURATION=Release OPJ_CI_BUILD_SHARED_LIBS=OFF
       addons:
         apt:
           packages:
