Remove useless packages

--- a/tools/travis-ci/docker/Dockerfile
+++ b/tools/travis-ci/docker/Dockerfile
@@ -4,6 +4,4 @@ MAINTAINER jmk "julien.malik@paraiso.me"
 ENV LC_ALL C
 ENV TERM xterm
 
-RUN yum -y update; yum -y install gcc make libtool elfutils which git redhat-lsb; yum clean all
-
-# CMD ["/bin/bash"]
+RUN yum -y update; yum -y install gcc make which git redhat-lsb; yum clean all
