Jpylyzer needs python & python-lxml

--- a/tools/travis-ci/docker/Dockerfile
+++ b/tools/travis-ci/docker/Dockerfile
@@ -4,4 +4,4 @@ MAINTAINER jmk "julien.malik@paraiso.me"
 ENV LC_ALL C
 ENV TERM xterm
 
-RUN yum -y update; yum -y install gcc make which git redhat-lsb libidn; yum clean all
+RUN yum -y update; yum -y install gcc make which git redhat-lsb libidn python python-lxml; yum clean all
