--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
 #      env: OPJ_CI_ARCH=x86_64 OPJ_CI_BUILD_CONFIGURATION=Release OPJ_CI_BUILD_SHARED_LIBS=OFF OPJ_CI_CPACK_SYSTEM_NAME=macosx
     - os: linux
       compiler: gcc
-      env: OPJ_CI_ARCH=x86_64 OPJ_CI_BUILD_CONFIGURATION=Release OPJ_CI_BUILD_SHARED_LIBS=OFF OPJ_CI_CPACK_SYSTEM_NAME=linux64 OPJ_CI_DOCKER=true
+      env: OPJ_CI_ARCH=x86_64 OPJ_CI_BUILD_CONFIGURATION=Release OPJ_CI_BUILD_SHARED_LIBS=OFF OPJ_CI_CPACK_SYSTEM_NAME=linux64 OPJ_CI_DOCKER=true OPJ_CI_JPYLYZER=false
       services:
         - docker
 #    - os: linux
