--- a/.travis.yml
+++ b/.travis.yml
@@ -7,34 +7,34 @@ env:
 
 matrix:
   include:
-#    - os: osx
-#      compiler: clang
-#      env: OPJ_CI_ARCH=x86_64 OPJ_CI_BUILD_CONFIGURATION=Release OPJ_CI_BUILD_SHARED_LIBS=OFF OPJ_CI_CPACK_SYSTEM_NAME=macosx
+    - os: osx
+      compiler: clang
+      env: OPJ_CI_ARCH=x86_64 OPJ_CI_BUILD_CONFIGURATION=Release OPJ_CI_BUILD_SHARED_LIBS=OFF OPJ_CI_CPACK_SYSTEM_NAME=macosx
     - os: linux
       compiler: gcc
       env: OPJ_CI_ARCH=x86_64 OPJ_CI_BUILD_CONFIGURATION=Release OPJ_CI_BUILD_SHARED_LIBS=OFF OPJ_CI_CPACK_SYSTEM_NAME=linux64 OPJ_CI_DOCKER=true OPJ_CI_JPYLYZER=false
       services:
         - docker
-#    - os: linux
-#      compiler: x86_64-w64-mingw32-gcc
-#      env: OPJ_CI_ARCH=x86_64 OPJ_CI_BUILD_CONFIGURATION=Release OPJ_CI_BUILD_SHARED_LIBS=OFF OPJ_CI_CPACK_SYSTEM_NAME=win64
-#      addons:
-#        apt:
-#          packages:
-#            - gcc-mingw-w64-base
-#            - binutils-mingw-w64-x86-64
-#            - gcc-mingw-w64-x86-64
-#            - gcc-mingw-w64
-#    - os: linux
-#      compiler: x86_64-w64-mingw32-gcc
-#      env: OPJ_CI_ARCH=i386 OPJ_CI_BUILD_CONFIGURATION=Release OPJ_CI_BUILD_SHARED_LIBS=OFF OPJ_CI_CPACK_SYSTEM_NAME=win32
-#      addons:
-#        apt:
-#          packages:
-#            - gcc-mingw-w64-base
-#            - binutils-mingw-w64-i686
-#            - gcc-mingw-w64-i686
-#            - gcc-mingw-w64      
+    - os: linux
+      compiler: x86_64-w64-mingw32-gcc
+      env: OPJ_CI_ARCH=x86_64 OPJ_CI_BUILD_CONFIGURATION=Release OPJ_CI_BUILD_SHARED_LIBS=OFF OPJ_CI_CPACK_SYSTEM_NAME=win64
+      addons:
+        apt:
+          packages:
+            - gcc-mingw-w64-base
+            - binutils-mingw-w64-x86-64
+            - gcc-mingw-w64-x86-64
+            - gcc-mingw-w64
+    - os: linux
+      compiler: x86_64-w64-mingw32-gcc
+      env: OPJ_CI_ARCH=i386 OPJ_CI_BUILD_CONFIGURATION=Release OPJ_CI_BUILD_SHARED_LIBS=OFF OPJ_CI_CPACK_SYSTEM_NAME=win32
+      addons:
+        apt:
+          packages:
+            - gcc-mingw-w64-base
+            - binutils-mingw-w64-i686
+            - gcc-mingw-w64-i686
+            - gcc-mingw-w64      
 
 install:
   - ./tools/travis-ci/install.sh
@@ -43,4 +43,3 @@ script:
   - ./tools/travis-ci/run.sh
 #  - ./tools/travis-ci/abi-check.sh
 #  - ./tools/travis-ci/deploy.sh
-
